# confluence-mcp-server

./: .env.example  .env_example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.optimized  Dockerfile.smithery  Dockerfile.test  Dockerfile.ultra-minimal  MCP_TOOL_HINTS_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  Product_Technical_Architecture.md  Product_Technical_Architecture_and_Rebuild_Plan.md  README.md  RELEASE_NOTES.md  RELEASE_v2.0.md  SMITHERY_FIXES_SUMMARY.md  SMITHERY_OPTIMIZATION_SUMMARY.md  TROUBLESHOOTING.md  TUTORIAL.md  claude_desktop_config.json  debug_section_editor.py  debug_smithery_config.py  debug_tools.py  decode_real_config.py  decode_smithery_token.py  demo_confluence_tool.py  fix_confluence_issues.py  fix_indentation.py  poetry.lock.bak  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  setup_claude_desktop.py  setup_local_config.py  smithery.starlette.yaml  smithery.test.yaml  smithery.ultra-minimal.yaml  smithery.yaml  (+14 more)
Claude Agent Feedback/: Claude Agent Fixes - MUST READ AND IMPLEMENT.md
confluence_mcp_server/: README.md  __init__.py  __main__.py  confluence_client.py  launcher.py  main.py  minimal_test_server.py  server_http.py  server_http_optimized.py  server_starlette_minimal.py  server_ultra_minimal.py  server_zero_imports.py  task.md
confluence_mcp_server/mcp_actions/: attachment_actions.py  comment_actions.py  echo_tool.py  page_actions.py  schemas.py  space_actions.py
confluence_mcp_server/selective_editing/: __init__.py  agent_hints.py  content_analyzer.py  exceptions.py  operations.py  pattern_editor.py  section_editor.py  structural_editor.py  xml_parser.py
confluence_mcp_server/utils/: error_handling.py  logging_config.py
tests/: conftest.py  test_add_attachment_tool.py  test_attachment_actions.py  test_comment_actions.py  test_content_analyzer.py  test_create_page_tool.py  test_delete_page_tool.py  test_get_page_tool.py  test_get_spaces_tool.py  test_http_transport.py  test_main_endpoints.py  test_pattern_editor.py  test_search_pages_tool.py  test_section_editor.py  test_selective_editing_foundation.py  test_structural_editor.py  test_update_page_tool.py
